Fixed whitespace issues

--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -33,3 +33,6 @@ $margin-body: 10px;
 
 $filterWidth: 180px;
 $height-tab-bar: 3.5em;
+$width-content: 700px;
+
+$breakpoint: 900px;
